tests/snapshot/error/source_locations/expression/template/tagged_template_call_with_receiver.js
var o = {
  foo() {
    throw new Error();
  }
};

o.foo`test`;