tests/snapshot/error/source_locations/expression/template/tagged_template_call_with_receiver.exp
Error: 
  ┌ source_locations/expression/template/tagged_template_call_with_receiver.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at foo (source_locations/expression/template/tagged_template_call_with_receiver.js:3:11)
  at <global> (source_locations/expression/template/tagged_template_call_with_receiver.js:7:1)